--- a/web/views/notfound.html
+++ b/web/views/notfound.html
@@ -1,14 +1,8 @@
-{{define "notfound"}}
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-    <link href="css/style.css" rel="stylesheet" />
-  </head>
+  {{template "header.html"}}
   <body>
-    <h1>Hello World</h1>
+    <h1>404 Not Found</h1>
+    {{template "footer.html"}}
   </body>
 </html>
-{{end}}
