--- a/web/views/index.html
+++ b/web/views/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  {{template "header.html"}}
+  {{ template "header.html" }}
   <body>
     <h1>Hello World</h1>
-    {{template "footer.html"}}
+    {{ template "footer.html" }}
   </body>
 </html>
