--- a/web/views/error.html
+++ b/web/views/error.html
@@ -1,8 +1,9 @@
+<!doctype html>
 <html lang="en">
   {{ template "header.html" }}
   <body>
     {{ template "navbar.html" }}
-    {{ template "collections" }}
+    <h1>Internal Server Error</h1>
     {{ template "footer.html" }}
   </body>
 </html>
