--- a/web/views/notfound.html
+++ b/web/views/notfound.html
@@ -2,6 +2,7 @@
 <html lang="en">
   {{ template "header.html" }}
   <body>
+    {{ template "navbar.html" }}
     <h1>404 Not Found</h1>
     {{ template "footer.html" }}
   </body>
